testsuite/tests/lexical_envs/invalid_entity_resolver/has_dynvars.lkt
import common

dynvar env: LexicalEnv

class FooNode implements Node[FooNode] {
    @with_dynvars(env)
    fun resolve_ref(): Entity[FooNode] = node.node_env().get(s"foo")?[0]
}
